Simplify builtin class definition workflow